--- a/999_few-shot_prompting.ipynb
+++ b/999_few-shot_prompting.ipynb
@@ -250,8 +250,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2893835/3142606401.py:7: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
-      "  llm = Ollama(model=\"mistral-small\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n"
+      "/tmp/ipykernel_2902946/3279691008.py:7: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"mixtral\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n"
      ]
     },
     {
@@ -260,24 +260,13 @@
      "text": [
       "로컬 데이터 분석가가 보고서를 생성 중...\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약:\n",
-      "   - 10월 배달 앱 로그에 따르면 야간 시간대(22시~02시) 주문량이 15% 하락했습니다.\n",
-      "   - 동일한 기간 동안 배달비는 평균 2,000원 상승했습니다.\n",
-      "   - 라이더 수는 10% 감소했습니다.\n",
+      "1. 데이터 요약:10월 야간 시간대 배달 앱 주문 수가 전월 동기에 비해 15% 하락하였으며, 이는 배달 비용의 상승과 라이더 인원의 감소와 관련이 있음을 나타내고 있습니다.\n",
       "\n",
-      "2. 가설 설정:\n",
-      "   - 야간 시간대 주문 감소와 배달비 상승은 라이더 수 감소로 인한 공급 부족과 관련이 있을 것이다.\n",
-      "   - 라이더 수 감소는 야간 시간대의 낮은 인센티브나 위험성 증가로 인해 발생했을 가능성이 높다.\n",
+      "2. 가설 설정: 야간 시간대 주문 하락은 배달 비용 상승과 라이더 인원 부족 때문일 것입니다.\n",
       "\n",
-      "3. 분석 결과:\n",
-      "   - 야간 시간대에 주문이 감소한 시기와 라이더 수 감소가 일치하는 경향을 보였습니다.\n",
-      "   - 배달비 상승과 주문 감소 간의 상관관계가 85% 확인되었습니다.\n",
-      "   - 라이더들의 야간 근무 인센티브와 관련된 설문조사 결과, 야간 시간대의 위험성 증가와 낮은 인센티브가 주요 원인으로 나타났습니다.\n",
+      "3. 분석 결과: 데이터를 분석한 결과, 야간 시간대 주문 하락폭은 배달 비용의 상승폭과 유사하며, 라이더 인원도 부족하여 주문을 처리할 수 없었음이 확인되었습니다.\n",
       "\n",
-      "4. 비즈니스 제언:\n",
-      "   - 야간 시간대 라이더 수를 증원하기 위해 추가적인 인센티브 프로그램을 도입해야 합니다.\n",
-      "   - 예를 들어, 야간 시간대에만 적용되는 보너스 지급이나 안전 장비 제공 등을 고려할 수 있습니다.\n",
-      "   - 또한, 배달비 상승으로 인한 고객 불만을 완화하기 위해 특정 조건 하에 무료 배달 혜택을 제공하는 것도 효과적일 것입니다.\n",
+      "4. 비즈니스 제언: 야간 시간대 배달 서비스를 유지하기 위해서는, 라이더 인력 확보와 더불어 배달 비용을 적절히 조정하거나 할인 등의 혜택을 제공하여 고객의 주문  incenitive를 높이는 것이 필요합니다.\n",
       "\n",
       "\n"
      ]
@@ -290,7 +279,7 @@
     "from langchain_core.prompts.prompt import PromptTemplate\n",
     "\n",
     "# 1. 로컬 LLM 설정  # # TODO Ollama의 mistral-7B, mistral-nemo, mistral-small 상업적 사용 가능 But!!! 3060(mistral-nemo(12B)) 이나 VRAM(3090/4090 mistral-small(22B)) 필요\n",
-    "llm = Ollama(model=\"mistral-small\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n",
+    "llm = Ollama(model=\"mixtral\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n",
     "# llm = OllamaLLM(model=\"mistral\", temperature=0)  # # TODO 차후 최신 OllamaLLM 로 변경 필요\n",
     "\n",
     "# 2. 데이터 분석 Few-shot 예시 정의 (데이터 요약 -> 가설 -> 결과 -> 제언)\n",
@@ -458,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c6eb056f2d651ccf",
    "metadata": {},
    "outputs": [
@@ -469,88 +458,46 @@
       "\n",
       "target_input: A쇼핑몰: 여성 패션 매출 +20%, 남성 패션 -5%, 20대 유입량 급증.\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약:\n",
-      "   - A쇼핑몰의 8월 매출에서 여성 패션 부문은 20% 증가하였으나, 남성 패션 부문은 5% 감소하였습니다.\n",
-      "   - 20대 고객 유입량이 급증하였습니다.\n",
-      "\n",
-      "2. 가설 설정:\n",
-      "   - 20대 고객이 주로 여성 패션을 구매하여 여성 패션 매출이 증가한 것으로 보입니다.\n",
-      "   - 남성 패션의 감소는 20대 남성 고객의 관심 부족이나 다른 요인에 의해 발생했을 가능성이 큽니다.\n",
-      "\n",
-      "3. 분석 결과:\n",
-      "   - 20대 여성 고객의 구매 비율이 전체 여성 패션 매출의 60%를 차지하고 있습니다.\n",
-      "   - 20대 남성 고객의 구매 비율이 전체 남성 패션 매출의 15%에 불과합니다.\n",
-      "   - 20대 남성 고객의 장바구니 포기율은 30%로, 여성 고객보다 높습니다.\n",
-      "\n",
-      "4. 비즈니스 제언:\n",
-      "   - 20대 남성 고객을 타겟으로 한 마케팅 전략을 강화하여 남성 패션 매출을 회복해야 합니다.\n",
-      "   - 20대 남성 고객에게 맞춤형 할인 쿠폰이나 특별 이벤트를 제공하여 구매 유도를 시도해야 합니다.\n",
-      "   - 장바구니 포기율을 줄이기 위해 20대 남성 고객의 구매 경험을 개선하는 방안을 모색해야 합니다.\n",
+      "1. 데이터 요약:1. 데이터 요약: A쇼핑몰의 8월 매출에서 여성 패션 부문은 매출이 증가하였으나, 남성 패션 부문은 감소한 상태입니다. 또한 20대 층대의 유입량이 급증하는 추세를 보여줍니다.\n",
+      "2. 가설 설정: 해당 시기에 진행된 특정 마케팅 活동 또는 이벤트가 여성 패션에 대한 고객의 관심을 끌어 매출을 증가시킨 것으로 보입니다.\n",
+      "3. 분석 결과: 해당 추측이 데이터를 분석한 결과, 여성 패션에 대한 고객의 관심도가 증가하였음을 확인할 수 있었습니다.\n",
+      "4. 비즈니스 제언: A쇼핑몰은 추세를 파악해 20대 고객에게 더욱 맞는 상품을 선보이며, 남성 패션 부문의 이탈율을 줄이기 위한 다양한 마케팅 활동을 진행하는 것이 필요합니다.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 반도체 제조 라인: 수율 95% 유지 중, 특정 세정 장비 온도 2도 상승, 불량 감지 0.5% 증가.\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약:\n",
-      "   - 반도체 제조 라인의 수율은 95%를 유지하고 있습니다.\n",
-      "   - 특정 세정 장비의 온도가 2도 상승했습니다.\n",
-      "   - 불량 감지율이 0.5% 증가했습니다.\n",
+      "1. 데이터 요약:제공된 데이터에 따르면, 반도체 제조 라인은 전반적으로 수율을 95%로 유지하고 있지만, 특정 세척 장비의 온도가 2도 상승한 결과 불량이 0.5% 증가하였습니다.\n",
       "\n",
-      "2. 가설 설정:\n",
-      "   - 세정 장비의 온도 상승이 반도체 제조 과정에서 발생하는 불량률 증가와 관련이 있을 것이다.\n",
+      "2. 가설 설정: 세척 장비의 온도 상승이 반도체 제조 라인의 수율에 부정적인 영향을 미치고 있음을 확인했으므로, 가설은 \"특정 세정 장비의 온도를 원상 복구시키지 않으면 불량률은 계속 증가할 것\"입니다.\n",
       "\n",
-      "3. 분석 결과:\n",
-      "   - 세정 장비 온도가 상승한 시기와 불량 감지율이 증가한 시기가 일치함을 확인했습니다.\n",
-      "   - 온도 상승 전후로 불량률의 변동 패턴을 분석한 결과, 온도 상승 후 불량률이 증가하는 경향이 명확히 나타났습니다.\n",
+      "3. 분석 결과: 데이터 분석 결과, 특정 세정 장비의 온도가 2도 상승한 시점부터 불량률이 증가하기 시작했으며, 해당 온도 조절을 원활히 수행하는 것이 불량률 저감에 도움이 될 것으로 예상됩니다.\n",
       "\n",
-      "4. 비즈니스 제언:\n",
-      "   - 세정 장비의 온도를 안정적으로 유지하기 위한 냉각 시스템 개선 및 온도 모니터링 시스템 도입이 필요합니다.\n",
-      "   - 정기적인 유지보수와 온도 점검을 통해 장비의 안정성을 확보하고, 불량률을 최소화해야 합니다.\n",
+      "4. 비즈니스 제언: 특정 세정 장비의 온도를 원래 수치로 복구시키고, 추가적인 모니터링을 통해 장비의 이상 발생을 사전에 예방하고, 불량률을 줄이기 위한 유지 보수 일정을 정기적으로 수행하는 것이 필요합니다.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 신규 앱 서비스: 주간 활성 사용자(WAU) 15% 상승, 결제 전환율 2% 정체, 결제 페이지 이탈률 70%.\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약:\n",
-      "   - 주간 활성 사용자(WAU)가 15% 증가하여 앱의 인기가 높아지고 있음을 보여줌.\n",
-      "   - 그러나 결제 전환율은 2%로 정체되어 있으며, 이는 사용자들이 결제를 완료하지 못하고 이탈하고 있음을 시사함.\n",
-      "   - 결제 페이지 이탈률이 70%에 달하여, 결제 과정에서 심각한 문제점이 존재함을 알림.\n",
+      "1. 데이터 요약:신규 앱 서비스는 주간 활성 사용자가 증가하였지만, 결제 전환율은 변화하지 않았으며, 결제 페이지 이탈률이  extremeley high 수준을 보여줍니다.\n",
       "\n",
-      "2. 가설 설정:\n",
-      "   - 결제 과정의 복잡성이나 불편함이 사용자 이탈의 주요 원인일 것이다.\n",
-      "   - 결제 페이지의 디자인이나 사용자 경험(UX)이 개선될 필요가 있을 것이다.\n",
+      "2. 가설 설정: 결제 페이지에서 사용자들이 마주하는 UX/UI 디자인 문제나 기술적 오류로 인해, 결제 전환율이 낮아지고 결제 페이지 이탈률이 높아진 것으로 추정됩니다.\n",
       "\n",
-      "3. 분석 결과:\n",
-      "   - 사용자 피드백을 분석한 결과, 결제 과정에서 발생하는 오류와 복잡한 절차가 주요 이탈 요인으로 확인됨.\n",
-      "   - 결제 페이지의 로딩 속도가 느리고, 결제 옵션이 제한적임이 발견됨.\n",
+      "3. 분석 결과: 사용자 피드백과 데이터 분석을 통해, 결제 페이지에서 발생하는 UI 문제와 기술적 오류를 파악할 수 있었습니다.\n",
       "\n",
-      "4. 비즈니스 제언:\n",
-      "   - 결제 과정의 단순화와 사용자 경험(UX) 개선을 통해 결제 전환율을 높여야 함.\n",
-      "   - 결제 페이지의 로딩 속도를 개선하고, 다양한 결제 옵션을 제공하여 사용자 편의성을 높여야 함.\n",
+      "4. 비즈니스 제언: 신규 앱 서비스의 결제 페이지에서 발생하는 UI 문제와 기술적 오류를 해결하고, 사용자들이 원활하게 결제할 수 있도록 보장하는 것이 필요합니다. 또한, A/B 테스트나 사용자 피드백을 통해 더욱 최적의 UX/UI 디자인을 찾아내어, 결제 전환율을 높이고 결제 페이지 이탈률을 줄여야 합니다.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 배달 서비스: 주말 주문량 +15%, 라이더 배차 시간 +10분, 고객 불만 건수 2배 증가.\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약:\n",
-      "   - 주말 주문량이 15% 증가하였습니다.\n",
-      "   - 라이더의 배차 시간이 10분 연장되었습니다.\n",
-      "   - 고객 불만 건수가 2배로 증가하였습니다.\n",
+      "1. 데이터 요약:주말에 배달 서비스의 주문량이 증가하여, 라이더 배차 시간이 증가하고 불만 건수도 함께 증가하였습니다.\n",
       "\n",
-      "2. 가설 설정:\n",
-      "   - 주말 주문량 급증으로 인해 라이더의 배차 시간과 고객 불만이 증가했을 가능성이 높다.\n",
-      "   - 주말에 발생하는 특정 이벤트나 프로모션이 주문량을 급증시켰을 것이다.\n",
+      "2. 가설 설정: 배달 서비스의 인기 증가는 known fact이나, 라이더 배차 시간과 불만 건수 증가는 고객의 응대 서비스 문제일 것이다.\n",
       "\n",
-      "3. 분석 결과:\n",
-      "   - 주말 주문량 급증 시점과 라이더 배차 시간 연장, 고객 불만 증가 시점이 일치함이 확인되었습니다.\n",
-      "   - 주말에 진행된 특정 이벤트나 프로모션이 주문량을 급증시켰고, 이를 처리하지 못해 배차 시간이 연장되고 고객 불만이 증가한 것으로 보입니다.\n",
-      "\n",
-      "4. 비즈니스 제언:\n",
-      "   - 주말 주문량 급증을 대비하여 라이더 인력을 추가로 배치하거나, 주말에만 적용되는 특별 할인이나 프로모션을 조정해야 합니다.\n",
-      "   - 고객 불만을 줄이기 위해 주말 배차 시간을 단축할 수 있는 로직을 도입하고, 고객에게 사전 알림을 제공하여 만족도를 높여야 합니다.\n",
       "\n",
       "\n",
       "\n"
